<resources>
    <string name="app_name">PronunciationTrainer</string>
    <string name="title">Приложение для изучения русского языка</string>
    <string name="start">Начать</string>
    <string name="info">Справочник</string>
    <string name="options">Настройки</string>
    <string name="authors">Авторы</string>
    <string name="authors_title">Разработчики приложения</string>
    <string name="autor1">Алексеев Никита Андреевич, группа 151112</string>
    <string name="autor2">Малыгин Алексей Андреевич, группа 151112</string>
    <string name="vowels">Гласные звуки</string>
    <string name="consonants">Согласные звуки</string>
    <string name="reset">Сбросить прогресс</string>
    <string name="pronounce">Вы произнесли:</string>
    <string name="record">Записать</string>
    <string name="record_start">Запись началась</string>
    <string name="next">Далее</string>
    <string name="sound_info">Информация о звуке</string>
    <string name="speak">Говорите</string>
    <string name="grade">Ваша оценка:</string>
    <string name="not_recognized">Не распознано</string>
    <string name="no_permision">Отсуствует разрешение на запись звука</string>
    <string name="instructions">Произнесите слово содержащее данный звук</string>
    <string name="correct">✔</string>
    <string name="wrong">❌</string>
    <string-array name="sounds">
        <item>Звук А</item>
        <item>Звук О</item>
        <item>Звук У</item>
        <item>Звук Э</item>
        <item>Звук Ы</item>
        <item>Звук И</item>
        <item>Звук Я</item>
        <item>Звук Ё</item>
        <item>Звук Е</item>
        <item>Звук Ю</item>
        <item>Звук Й</item>
        <item>Звук Б</item>
        <item>Звук П</item>
        <item>Звук М</item>
        <item>Звук Д</item>
        <item>Звук Т</item>
        <item>Звук Н</item>
        <item>Звук К</item>
        <item>Звук Г</item>
        <item>Звук Х</item>
        <item>Звук В</item>
        <item>Звук Ф</item>
        <item>Звук Р</item>
        <item>Звук Ж</item>
        <item>Звук Ш</item>
        <item>Звук Л</item>
        <item>Звук Ц</item>
        <item>Звук Ч</item>
        <item>Звук Щ</item>
    </string-array>
    <string-array name="categories">
        <item>Гласные</item>
        <item>Согласные</item>
    </string-array>
    <string-array name="how_to_speak">
        <item>- Нижняя челюсть опущена так, что расстояние между зубами равно примерно одному пальцу;- Язык лежит плоско, кончик языка у нижних передних зубов;- Губы образуют ровный овал, нёбная занавеска поднята;- Голосовые связки вибрируют</item>
        <item>- Губы несколько вытянуты вперед и округлены;- Кончик языка опущен и оттянут от нижних передних зубов;- Задняя часть языка несколько приподнята у мягкому нёбу</item>
        <item>- Челюсть опущена на расстояние, равное примерно одному пальцу;- Губы выдвинуты далеко вперед и округлены больше, чем при произнесении звука о;- Кончик языка отодвинут от нижних передних зубов на расстояние большее, чем при произнесении звука о, задняя его часть высоко поднята к нёбу;- Нёбная занавеска поднята; Голосовые связки вибрируют</item>
        <item>- Нижняя челюсть опущена на расстояние полутора пальцев;- Зубы слегка обнажены;- Язык своим кончиком касается нижних передних зубов, а его средняя часть поднята к нёбу;- Нёбная занавеска поднята;- Связки вибрируют</item>
        <item>- Расстояние между зубами несколько меньше, чем при произнесении звука у;- Зубы немного обнажены; кончик языка касается нижних передних зубов, средняя его часть приближается к нёбу;- Нёбная занавеска поднята; голосовые связки вибрируют</item>
        <item>- Кончик языка касается нижних зубов;- Спинка языка напряжена и поднята к передней части твердого нёба;- Голосовые связки вибрируют, губы слегка растянуты и прижаты к обнаженным зубам;- Нёбная занавеска поднята</item>
        <item>- Звук я</item>
        <item>- Звук ё</item>
        <item>- Звук е</item>
        <item>- Звук ю</item>
        <item>- При произнесении звука й кончик языка касается нижних зубов;- Спинка языка напряжена и поднята к передней части твердого нёба;- Голосовые связки вибрируют;- Мягкое нёбо поднято;- Звук й произносится одновременно с гласными звуками</item>
        <item>- Губы плотно сомкнуты;- Язык лежит свободно, кончик — у нижних резцов;- При произнесении звука б нёбная занавеска поднята;- Струя выдыхаемого воздуха, направленная в рот, разрывает сомкнутые губы, отчего образуются звуки бил;- При звуке б голосовые связки вибрируют</item>
        <item>- Губы плотно сомкнуты;- Язык лежит свободно, кончик — у нижних резцов;- При произнесении звука п нёбная занавеска поднята;- Струя выдыхаемого воздуха, направленная в рот, разрывает сомкнутые губы, отчего образуются звуки бил</item>
        <item>- Губы слегка сомкнуты, язык лежит свободно, как при произнесении звука а;- Выдыхаемый воздух проходит через нос</item>
        <item>- Язык слегка поднят к нёбу и передней своей частью плотно прижимается к верхним передним зубам;- При звуке д связки вибрируют;- При звуке д нёбная занавеска поднята</item>
        <item>- Язык слегка поднят к нёбу и передней своей частью плотно прижимается к верхним передним зубам;- При звуке т нёбная занавеска поднята</item>
        <item>- Язык слегка поднят к нёбу и передней своей частью плотно прижимается к верхним передним зубам;- При звуке н связки вибрируют;- При звуке н нёбная занавеска опущена</item>
        <item>- Выгнутая спинка языка касается твердого нёба;- Нёбная занавеска поднята;- Выдыхаемая струя воздуха прорывается между спинкой языка и нёбом — от этого образуются взрывные звуки к;- Если же между нёбом и спинкой языка остается щель, то получается длительный звук х;- Нёбная занавеска при образовании звуков к поднята</item>
        <item>- Выгнутая спинка языка касается твердого нёба;- Нёбная занавеска поднята;- Выдыхаемая струя воздуха прорывается между спинкой языка и нёбом — от этого образуются взрывные звуки г;- Если же между нёбом и спинкой языка остается щель, то получается длительный звук х;- Нёбная занавеска при образовании звуков г поднята;- При звуке г голосовые связки вибрируют</item>
        <item>- Выгнутая спинка языка касается твердого нёба;- Нёбная занавеска поднята;- Если же между нёбом и спинкой языка остается щель, то получается длительный звук х;- Нёбная занавеска при образовании звуков х поднята;</item>
        <item>- Нижняя губа своим внутренним краем слегка касается верхних зубов;- Нёбная занавеска поднята, язык лежит свободно — кончик у нижних передних зубов;- Продуваемый между зубами и губой воздух и образует звуки в;- При звуке в связки вибрируют</item>
        <item>- Нижняя губа своим внутренним краем слегка касается верхних зубов;- Нёбная занавеска поднята, язык лежит свободно — кончик у нижних передних зубов;- Продуваемый между зубами и губой воздух и образует звуки ф</item>
        <item>- Образование звука р вызывается частыми колебаниями кончика языка под действием выдыхаемой струи воздуха;- При звуке р колебание происходит у альвеол верхних передних зубов;- Голосовые связки вибрируют.</item>
        <item>- Широкий кончик языка поднят почти к краю верхних альвеол, но не касается твердого нёба;- Между языком и твердым нёбом образуется щель;- Боковые края языка плотно прижаты к верхним коренным зубам;- Задняя часть спинки языка также поднята и образует с твердым нёбом второе сужение. В языке образуется впадина (иначе ее называют ковшиком или чашечкой);- Зубы несколько раздвинуты, губы немного выдвинуты вперед;- При произнесении звука ж связки вибрируют</item>
        <item>- Широкий кончик языка поднят почти к краю верхних альвеол, но не касается твердого нёба;- Между языком и твердым нёбом образуется щель;- Боковые края языка плотно прижаты к верхним коренным зубам;- Задняя часть спинки языка также поднята и образует с твердым нёбом второе сужение. В языке образуется впадина (иначе ее называют ковшиком или чашечкой);- Зубы несколько раздвинуты, губы немного выдвинуты вперед</item>
        <item>- При произнесении звука л кончик языка прикасается к верхним передним зубам;- Корень языка приподнят;- Нёбная занавеска поднята, голосовые связки вибрируют</item>
        <item>- Состоит из звуков т и с, причем те произносится без взрыва и плавно переходит в звук с</item>
        <item>- Звук ч состоит из звуков "т'" и "ш'" которые произносятся без заметного взрыва</item>
        <item>- Звук щ — это удлиненный мягкий звук "ш'";- Кончик языка при произнесении щ несколько больше продвинут к передним зубам, чем при ш</item>
    </string-array>
</resources>