<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.StartFragment">

    <TextView
        style="@style/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/startButton"
        style="@style/main"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:textSize="40sp"
        android:gravity="center"
        android:text="@string/start" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/infoButton"
        style="@style/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:visibility="gone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/optionsButton"
        style="@style/main"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:textSize="40sp"
        android:gravity="center"
        android:text="@string/options" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/authorsButton"
        style="@style/main"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:textSize="40sp"
        android:gravity="center"
        android:text="@string/authors" />

</LinearLayout>